Fix broken layout with should_list_all_streams.
When flagged to false the right-floated item isn’t generated and the
.clear-float class was not working. This fixes the rendering.

--- a/static/styles/components.css
+++ b/static/styles/components.css
@@ -32,6 +32,10 @@
     background-color: #FFF;
 }
 
+.clear-float {
+    clear: both;
+}
+
 /* -- base button styling -- */
 .new-style .button {
     padding: 8px 15px;
